refactor: remove unused password encoder and related methods from user service
refactor: remove unused validator from DeckFacade and related tests

refactor: remove unused userDetailsService and passwordEncoder from AuthFacade

fix(ui): remove redundant createForm() call in EditUserDialog constructor

style: optimize imports and replace deprecated stream collect with toList

style: minor code cleanup and formatting adjustments